{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 58,
  "lineage": "72034f84-c2e7-c753-0f76-336b235f78da",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/publicIPAddresses/bastion-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.211.205.60",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "bastion-ip",
            "resource_group_name": "rg-hybride-infra",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-admin",
            "location": "francecentral",
            "name": "nsg-subnet-admin",
            "resource_group_name": "rg-hybride-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Internal-Monitoring",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-TestSubnet",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "10.10.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VNet-Inbound",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.254.0/27",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Grafana",
                "priority": 210,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VLAN20-HTTPS",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.200.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Teampass-Web",
                "priority": 220,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VLAN20-HTTP",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.200.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Prometheus-2",
                "priority": 205,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9100",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Prometheus-1",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-test",
            "location": "francecentral",
            "name": "nsg-subnet-test",
            "resource_group_name": "rg-hybride-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-All-VNet",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_users",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-users",
            "location": "francecentral",
            "name": "nsg-subnet-users",
            "resource_group_name": "rg-hybride-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-TestSubnet",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "10.10.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VNet-Inbound",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.254.0/27",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VLAN10-HTTPS",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.100.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VLAN10-HTTP",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.100.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin",
            "name": "subnet-admin",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hybride-infra",
            "virtual_network_name": "vnet-hybride"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.254.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hybride-infra",
            "virtual_network_name": "vnet-hybride"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.255.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hybride-infra",
            "virtual_network_name": "vnet-hybride"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/snet-test",
            "name": "snet-test",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hybride-infra",
            "virtual_network_name": "vnet-hybride"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_users",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-users",
            "name": "subnet-users",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hybride-infra",
            "virtual_network_name": "vnet-hybride"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "admin_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin",
            "network_security_group_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-admin",
            "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_admin",
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_admin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/snet-test",
            "network_security_group_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-test",
            "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/snet-test"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_test",
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_test",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "users_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-users",
            "network_security_group_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-users",
            "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-users"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_users",
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_users",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aab6a07d-f30e-497f-a4b8-b7bea423708c",
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride",
            "location": "francecentral",
            "name": "vnet-hybride",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-hybride-infra",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin",
                "name": "subnet-admin",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-admin"
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-users",
                "name": "subnet-users",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-users"
              },
              {
                "address_prefixes": [
                  "10.10.254.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.255.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/GatewaySubnet",
                "name": "GatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/snet-test",
                "name": "snet-test",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-test"
              }
            ]
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_nextcloud",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkInterfaces/nic-vm-nextcloud",
            "internal_domain_name_suffix": "pwqlnkqo4n5utjfyw45kii1qre.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-users"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "60-45-BD-6C-44-0E",
            "name": "nic-vm-nextcloud",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "rg-hybride-infra",
            "virtual_machine_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Compute/virtualMachines/vm-nextcloud"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_users",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_supervision",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkInterfaces/nic-vm-supervision",
            "internal_domain_name_suffix": "pwqlnkqo4n5utjfyw45kii1qre.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "60-45-BD-18-EC-F1",
            "name": "nic-vm-supervision",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "rg-hybride-infra",
            "virtual_machine_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Compute/virtualMachines/vm-supervision"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_admin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_teampass",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkInterfaces/nic-vm-teampass",
            "internal_domain_name_suffix": "pwqlnkqo4n5utjfyw45kii1qre.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/subnet-admin"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "60-45-BD-19-CF-B4",
            "name": "nic-vm-teampass",
            "private_ip_address": "10.10.1.5",
            "private_ip_addresses": [
              "10.10.1.5"
            ],
            "resource_group_name": "rg-hybride-infra",
            "virtual_machine_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Compute/virtualMachines/vm-teampass"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_admin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_windows_test",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/networkInterfaces/nic-windows-test",
            "internal_domain_name_suffix": "pwqlnkqo4n5utjfyw45kii1qre.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/snet-test"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "60-45-BD-6B-E7-CC",
            "name": "nic-windows-test",
            "private_ip_address": "10.10.3.4",
            "private_ip_addresses": [
              "10.10.3.4"
            ],
            "resource_group_name": "rg-hybride-infra",
            "virtual_machine_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Compute/virtualMachines/vm-windows-test"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_test",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/publicIPAddresses/vpn-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.211.107.33",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "vpn-pip",
            "resource_group_name": "rg-hybride-infra",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpn_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.10.255.30"
                    ],
                    "ip_configuration_name": "vpn-ipconfig",
                    "tunnel_ip_addresses": [
                      "4.211.107.33"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworkGateways/vpn-gateway",
            "ip_configuration": [
              {
                "name": "vpn-ipconfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/publicIPAddresses/vpn-pip",
                "subnet_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworks/vnet-hybride/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "francecentral",
            "name": "vpn-gateway",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-hybride-infra",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_gateway",
            "module.network.azurerm_virtual_network.vnet",
            "module.vpn.azurerm_public_ip.vpn_pip"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "vpn_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/connections/vpn-to-pfsense",
            "ipsec_policy": [
              {
                "dh_group": "DHGroup14",
                "ike_encryption": "AES256",
                "ike_integrity": "SHA256",
                "ipsec_encryption": "AES256",
                "ipsec_integrity": "SHA256",
                "pfs_group": "PFS14",
                "sa_datasize": 0,
                "sa_lifetime": 3600
              }
            ],
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/localNetworkGateways/local-pfsense",
            "location": "francecentral",
            "name": "vpn-to-pfsense",
            "private_link_fast_path_enabled": false,
            "resource_group_name": "rg-hybride-infra",
            "routing_weight": 0,
            "shared_key": "SuperSecretVPNKey123!",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/c11327dc-aef4-4bdb-b30f-61f6b55ced1e/resourceGroups/rg-hybride-infra/providers/Microsoft.Network/virtualNetworkGateways/vpn-gateway"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.main",
            "module.network.azurerm_subnet.subnet_gateway",
            "module.network.azurerm_virtual_network.vnet",
            "module.vpn.azurerm_local_network_gateway.local_gw",
            "module.vpn.azurerm_public_ip.vpn_pip",
            "module.vpn.azurerm_virtual_network_gateway.vpn_gw"
          ]
        }
      ]
    }
  ]
}